--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.nobrain.devfest.reactiveandroid"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,41 +20,12 @@ android {
         }
     }
 
-    dexOptions {
-        javaMaxHeapSize "2g"
-        maxProcessCount Math.max(1, ((int) (Runtime.getRuntime().availableProcessors() / 2)))
-    }
-
-    configurations.all {
-        resolutionStrategy {
-            force rootProject.ext.dependencies.library.support_annotation
-        }
-    }
-
     testOptions.unitTests.all {
         testLogging {
             events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
         }
     }
 
-    packagingOptions.excludes = [
-            'META-INF/DEPENDENCIES',
-            'META-INF/LICENSE',
-            'META-INF/LICENSE.txt',
-            'LICENSE.txt',
-            'LICENSE',
-            'META-INF/license.txt',
-            'META-INF/NOTICE',
-            'NOTICE',
-            'asm-license.txt',
-            'META-INF/NOTICE.txt',
-            'META-INF/notice.txt',
-            'META-INF/ASL2.0',
-            '.readme',
-            '.readme.txt',
-            'META-INF/maven/com.google.guava/guava/pom.properties',
-            'META-INF/maven/com.google.guava/guava/pom.xml'
-    ]
 
     lintOptions {
         abortOnError false
@@ -63,4 +34,30 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+}
+
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:2.9.0"
+
+    //android support
+    compile 'com.android.support:appcompat-v7:26.0.2'
+    compile "com.android.support:support-v4:26.0.2"
+    compile "com.android.support:support-v13:26.0.2"
+    compile "com.android.support:support-annotations:26.0.2"
+    compile "com.android.support:design:26.0.2"
+    compile "com.android.support.constraint:constraint-layout:1.0.2"
+
+    //reactiveX
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+    compile "io.reactivex.rxjava2:rxjava:2.1.3"
+
+    //kotlin
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
 }
